# LitTCG

./: .gitignore  AGENTS.md  ARCHITECTURE.md  AndroidManifest.xml  BRAND_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GDD.md  IMPLEMENTATION_PLAN.md  LOCAL_AGENT_SETUP.md  MARKETING_PLAN.md  MASTER_TASK_LIST.md  PRESS_KIT.md  README.md  ROADMAP.md  TECHNICAL_MANUAL.md  index.html  itch_page.md  landing_page.html  parent_report.html  task.md  walkthrough.md
.github/workflows/: android.yml
LitTTC/: AndroidManifest.phone.xml  build.rs  index.html  task.md
LitTTC/assets/: lore_db.json  quest_data.json  word_database.json
LitTTC/docs/: 2D_TO_XR.md
LitTTC/scripts/: android_mirror.sh  android_profile.sh  build-apk.sh
LitTTC/src/: lib.rs  main.rs
LitTTC/tests/: integration_tests.rs
assets/: lore_db.json
crates/faces-protocol/: Cargo.toml  PROGRESS.md
crates/faces-protocol/docs/: FACES_GAP_ANALYSIS.md  FACES_LABELING_GUIDE.md  FACES_PYTHAGOREAN_RESEARCH.md  FACES_TECHNICAL_INTENT.md  FACES_VALIDATION_FRAMEWORK.md
crates/faces-protocol/docs/workflows/: 10-faces-w7-eval-harness.md  11-faces-w8-w10-emulator.md  w10-emulator-fleet-physical.md  w2-scored-detection.md  w3-multi-sentence-profile.md  w4-consent-gate.md  w5-static-dynamic.md  w6-labeling-guide.md  w7-eval-harness.md  w8-emulator-core.md  w9-emulator-interaction.md
crates/faces-protocol/eval/data/: sample.jsonl
crates/faces-protocol/src/: action.rs  aura.rs  consent.rs  container.rs  detect.rs  focus.rs  lib.rs  profile.rs  protocol.rs  render.rs  segment.rs  transition.rs
crates/faces-protocol/src/eval/: benchmark.rs  loader.rs  metrics.rs  mod.rs  runner.rs
crates/lit-asset-forge/: Cargo.toml  README.md
crates/lit-asset-forge/src/: comfy.rs  lib.rs  lore.rs  main.rs  manifest.rs  pipeline.rs  prompts.rs
dashboard/: index.html
docs/: ADDITIONAL_OPPORTUNITIES_AND_SALES_IMPROVEMENTS.md  ANDROID_NDK_TODO.md  COMBAT_BRAINSTORM.md  CROSS_PROJECT_INTEGRATION_PLAN.md  DEMO_CHECKLIST.md  GRANT_STRATEGY.md  LITTCG_ANDROID_PARENT_CHILD_SALES_PLAN.md  LITTCG_PRODUCT_DIRECTION_DECISION.md  LITTCG_REUSABLE_ASSETS_AND_MONETIZATION.md  LITTCG_SCHOOLS_GO_TO_MARKET_PLAN.md  LORE_BRAINSTORM.md  MARKETING_RESEARCH_WIFE_REVIEW.md  MTI_BRIEF.md  PROFESSIONAL_GAP_ANALYSIS.md  PROFESSIONAL_MARKETING_STRATEGY.md  PROFESSIONAL_NEEDS_ANALYSIS.md  README.md  SBIR_PHASE1.md  WHY_AND_AUDIENCE_RESEARCH.md  WIFE_REVIEW_ONE_PAGER.md  worldbuilding.md
legacy/: Design_Doc.md  codebase_audit.md
legacy/old_docs/: 01_Vision_and_Pedagogy.md  02_Systems_Architecture.md  03_Summoning_and_Combat.md  04_XR_Hand_and_Voice_Integration.md  05_Database_and_Curriculum.md  MASTER_DESIGN_DOCUMENT.md  Semantic Slime_ 2D Prototype Developer Guide.md  Semantic Slime_ 40-Hour GDD and Research Spec.md  Semantic Slime_ K-12 Dynamic Curriculum Architecture.md  Semantic Slime_ Mentor-in-the-Middle Dashboard Spec.md  Spatial Computing Dev Workstation Blueprint.md  docs_README.md
scripts/: agent-loop.sh  android_logcat.sh  android_record_demo.sh  android_smoke_test.sh  build_wasm.sh  generate-demo-assets.sh  generate_icon.py  overnight-claude.sh  push_to_github.sh  setup_hermes_swarm.sh  start-claude-local.sh
src/: altar.rs  battle.rs  blocklist.rs  chat.rs  commands.rs  components.rs  database.rs  deck.rs  dialogue_ui.rs  hand_tracking.rs  hud.rs  input.rs  letter.rs  lib.rs  main.rs  menu.rs  paywall.rs  quest.rs  render.rs  save.rs  spatial_deck.rs  spatial_ui.rs  tutorial.rs
src/bridge/: url_opener.rs
src/core/: asset_catalog.rs  blocklist.rs  components.rs  deck.rs  dialogue_ui.rs  difficulty.rs  generated_assets.rs  (+9 more)
tests/: integration_tests.rs
(+23 files in other folders)
