[package]
name = "lit-asset-forge"
version = "0.1.0"
edition = "2021"
license = "Proprietary"
authors = ["Joshua Atkinson"]
description = "LitTCG asset forge — LongCat/ComfyUI driven AI art pipeline for pet portraits and 3D assets"

[lib]
name = "lit_asset_forge"
path = "src/lib.rs"

[[bin]]
name = "lit-asset-forge"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
